--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ flake8==3.3.0
 Jinja2==2.9.6
 MarkupSafe==1.0
 mccabe==0.6.1
-pkg-resources==0.0.0
 pycodestyle==2.3.1
 pyflakes==1.5.0
 livereload==2.5.1
+Babel==2.4.0
